# mirror-mirror

./: .gitignore  .gitmodules  README.md  aggregate_mia_results.py  comparison.ipynb  environment.yaml  eval_membership_inference.py  eval_mse_weights.py  eval_perturbation_kld.py  example_forget_set.jsonl  experiment_config.yaml  find_motivating_examples.py  generate_forget_set.py  motivation_graphs.ipynb  plot_utils.py  pyproject.toml  resnet.py  run_experiment.py  run_experiment_cifar.sh  run_experiment_mnist.sh  run_lira.sh  run_mia_experiment_cifar.sh  run_poisoning_experiment.py  setup.py  test_config.yaml  train_m1_m3.py  train_original_and_control.py  train_resnet.py  unlearn_forget_set.py  visualize_results.ipynb
components/: certified_removal.py  datasets.py  models.py  resnet.py  unlearning_methods.py
configs/: badnets_poison_experiment_config.yaml  certified_deep_unlearning_experiment_config.yaml  certified_removal_experiment_config.yaml  classwise_experiment_config.yaml  dp_sgd_experiment_config.yaml  dp_sgd_good_performance_experiment_config.yaml  gaussian_poison_experiment_config.yaml  random_experiment_config.yaml  test_cifar10_config.yaml  test_config.yaml  test_imagenette_config.yaml  wanet_poison_experiment_config.yaml
distinguishers/: lira.py  logreg_mia.py  mse_score.py  random_image_kld.py  random_perturbation_kld.py  randomness_score.py
membership_inference/: logreg_mia.py
notes/: lit_review_assignment.md  unlearning_lit_review_neil.md
old_scripts/: aggregate_results.py  eval_perturbation_kld.py  run_kld_experiment_cifar.sh  (+2 more)
(+25 files in other folders)
