[project]
name = "mirror-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "kaleido>=1.2.0",
  "matplotlib>=3.10.8",
  "nbformat>=5.10.4",
  "opacus>=1.5.4",
  "opencv-python>=4.12.0.88",
  "pandas>=2.3.3",
  "plotly>=6.5.0",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "torch>=2.9.1",
  "torchattacks>=3.5.1",
  "torchaudio>=2.9.1",
  "torchvision>=0.24.1",
  "tqdm>=4.67.1",
  "wandb>=0.23.1",
]
